--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: null
+name: drdaft
 plugins:
   - jekyll-relative-links
 relative_links:
@@ -12,5 +14,4 @@ include:
   - CONTRIBUtING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
-show_downloads:
-  enabled: false
+show_downloads: false
