--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
 title: DrDaft's Playground
+description: Playgrounds are everywhere, if you are willing to look for them.
+author: Dr Haider Ali Akmal
+
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name/
