Fix relative link issue for Github Pages

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:name/
+
+baseurl: "/playgrounds"
+url: "https://haakmal.github.io"
