Added WIP disclaimer

--- a/_data/projects/provocator.yml
+++ b/_data/projects/provocator.yml
@@ -1,4 +1,4 @@
 title: "Provocator 9000"
-description: "An interactive AI scenario provocation generator, that can yield positive and negative outputs for a given scenario/idea/concept."
+description: "[Work in progress] An interactive AI scenario provocation generator, that can yield positive and negative outputs for a given scenario/idea/concept."
 credits: "Haider Akmal"
 url: "/projects/provocator/"
