--- a/_data/projects/design-methods.yml
+++ b/_data/projects/design-methods.yml
@@ -1,4 +1,4 @@
 title: "Design Research Methods"
-description: "A visual guide for understanding when to use design research methods along the Design Double Diamond."
+description: "[Work in progress] A visual guide for understanding when to use design research methods along the Design Double Diamond."
 credits: "Haider Akmal"
 url: "/projects/design-methods/"
