Update AI model

--- a/_data/projects/future-thing.yml
+++ b/_data/projects/future-thing.yml
@@ -1,4 +1,4 @@
-title: "The Thing From The Future"
-description: "A handy generator for The Thing From The Future for ideation and critique."
+title: "The (Provoked) Thing From The Future"
+description: "A handy generator for The Thing From The Future for ideation and critique aimed at AI-guided future provocations."
 credits: "Haider Akmal (this implementation) but original Stuart Candy & Jeff Watson"
 url: "/projects/future-thing/"
